--- a/AjaxBankingProject/src/main/webapp/login.html
+++ b/AjaxBankingProject/src/main/webapp/login.html
@@ -13,7 +13,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>Welcome to Java Duke's Bank</h1>	
+<h1>Welcome to Java Duke's Bank 10:48</h1>	
 <form method="POST" action="login">
 	<!-- 
 		synchronize request with the form tag
